tests/ui/pattern/usefulness/issue-57472.stderr
error: unreachable pattern
  --> $DIR/issue-57472.rs:15:13
   |
LL |             Punned { bar: [_], .. } => println!("bar"),
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ this arm is never executed
   |
note: the lint level is defined here
  --> $DIR/issue-57472.rs:2:9
   |
LL | #![deny(unreachable_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: unreachable pattern
  --> $DIR/issue-57472.rs:31:13
   |
LL |             Punned { bar: [_] } => println!("bar"),
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ this arm is never executed

error: aborting due to 2 previous errors

